k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: app.eks.kosmiha.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-workload
            port:
              number: 80
